--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,14 @@ body{
   height: 100vh;
   background-color: #201b2c;
 }
+  /* header */
 h1{
   text-align: center;
   font-size: 50px;
   color: #8dc46d;
   margin-bottom: 20px;
 }
+ /* formulario */
 form{
   max-width: 90%;
   background-color: #2f2841;
